--- a/terminalWeb/index.html
+++ b/terminalWeb/index.html
@@ -11,7 +11,7 @@
     <div class="terminal-container">
         <div class="header">
             <h1>Terminal Simulation Game</h1>
-            <div id="stats">Score: <span id="score">0</span> | Location: <span id="current-location">Gateway</span></div>
+            <div id="stats">Score: <span id="score">0</span><span>/125</span> | Location: <span id="current-location">Gateway</span></div>
         </div>
         <div class="terminal">
             <div class="terminal-body"></div>
